--- a/playground/async-await-error-handling.html
+++ b/playground/async-await-error-handling.html
@@ -32,6 +32,46 @@
       });
     }
 
+
+
+    // TRY AND CATCH
+    // async function go() {
+    //   try {
+    //     const pizza = await makePizza(['pineapple'])
+    //     console.log(pizza);
+    //   } catch (err) {
+    //     console.log(err);
+    //   }
+    // }
+    function handleError(err) {
+      console.log('oh noooo');
+      console.log(err);
+    }
+
+    async function go() {
+      const pizza = await makePizza(['pineapple'])
+
+      // Catching an error while declering a function
+      // const pizza = await makePizza(['pineapple']).catch(handleError);
+      console.log(pizza);
+    }
+
+    // Catching an error while calling out a function
+    // go().catch(handleError);
+
+    //  Catch it at a run time 
+    go().catch(handleError);
+
+
+    // Make a safe function with a HOF
+    // function makeSafe(fn, errorHandler) {
+    //   return function () {
+    //     fn().catch(errorHandler)
+    //   }
+    // };
+
+    // const safeGo = makeSafe(go, handleError);
+    // safeGo();
   </script>
 </body>
 
