--- a/exercises/75 - CORS and Recipes/index.html
+++ b/exercises/75 - CORS and Recipes/index.html
@@ -11,13 +11,17 @@
       display: grid;
       grid-template-columns: 1fr;
     }
+
+    button[disabled] {
+      opacity: 0.2;
+    }
   </style>
 </head>
 
 <body>
   <div class="wrapper">
     <form class="search" autocomplete="off">
-      <input type="text" name="query">
+      <input type="text" name="query" value="pizza">
       <button name="submit" type="submit">Submit</button>
     </form>
     <div class="recipes"></div>
